clang/test/Lexer/minimize_source_to_dependency_directives_at_import_missing_semi.m
// RUN: %clang_cc1 -verify -print-dependency-directives-minimized-source %s 2>&1

@import x // expected-error {{could not find ';' after @import}}
